Canvas filling paths or rects need to be invalidate larger rects for some compositing modes. https://bugs.webkit.org/show_bug.cgi?id=70379

Patch by Ben Wells <benwells@chromium.org> on 2011-11-02
Reviewed by James Robinson.

Source/WebCore:

Test: fast/canvas/canvas-composite-fill-repaint.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::fill):
(WebCore::CanvasRenderingContext2D::fillRect):
(WebCore::CanvasRenderingContext2D::drawImage):
(WebCore::CanvasRenderingContext2D::didDrawEntireCanvas):
* html/canvas/CanvasRenderingContext2D.h:

LayoutTests:

* fast/canvas/canvas-composite-fill-repaint-expected.txt: Added.
* fast/canvas/canvas-composite-fill-repaint.html: Added.
* platform/chromium-gpu-linux/fast/canvas/canvas-composite-fill-repaint-expected.png: Added.
* platform/chromium-linux/fast/canvas/canvas-composite-fill-repaint-expected.png: Added.
* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/87636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99043 268f45cc-cd09-0410-ab3c-d52691b4dbfc